fix: alteração na logica de autenticação