@@ -1,12 +1,14 @@
 package com.example.api.security;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.example.api.entity.User;
+import com.example.api.entity.UserRole;
 
 public class UserAuthenticated implements UserDetails {
     private final User user ;
@@ -19,7 +21,8 @@ public class UserAuthenticated implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+       if(user.getRole() == UserRole.ADMIN) return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER"));
+       else return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
@@ -31,6 +34,6 @@ public class UserAuthenticated implements UserDetails {
     public String getUsername() {
         return user.getNome();
     }
-    
+
     
 }
